--- a/DIA2/css/styles.css
+++ b/DIA2/css/styles.css
@@ -70,12 +70,8 @@ pre{
 }
 
 .referencias{
-    background-color: rgb(22, 22, 70)
+    background-color: rgb(22, 22, 70);
     padding: 0;
-}
-
-.fechas{
-
 }
 
 *{
