--- a/DIA5/css/styles.css
+++ b/DIA5/css/styles.css
@@ -40,6 +40,13 @@ button.login {
     width: 205px;
     height: 54px;
     border-radius: 100px;
+    font-family: 'Amazon Embered';
+    font-size: 25px;
+    text-align: center; 
+}
+
+button.login:hover{
+    background-color: rgb(214, 209, 209);
 }
 
 #logo {
@@ -48,16 +55,27 @@ button.login {
     margin-top: 10%;
 }
 
-.font-text {
-    color: white;
+#title1{
     font-family: 'Amazon Embered';
+    color: white;
+    font-size: 60px;
+}
+
+#p1{
+    font-family: 'Amazon Embered';
+    color: white;
+    font-size: 30px;
+    justify-content: center;
 }
 
 #text1 {
     text-align: center;
+    width: 60%;
+    margin: auto;
 }
 
 div.signup {
+    margin-top: 120px;
     text-align: center;
     height: 360px;
 }
@@ -66,6 +84,8 @@ button.signup {
     border-radius: 150px;
     width: 400px;
     height: 100px;
+    font-family: 'Amazon Embered';
+    font-size: 40px;
 }
 
 button.signup:hover {
@@ -81,7 +101,18 @@ button.signup:hover {
     height: 35%;
     margin: 1% 1.5%;
     border-radius: 50px;
+    font-family: 'Amazon Embered';
+    color: white;
 }
+
+.title-cont{
+    font-size: 50px;
+}
+
+.p-cont{
+    font-size: 30px;
+}
+
 
 div.container2{
     text-align: center;
@@ -91,6 +122,8 @@ div.container2{
     height: 45%;
     margin: 1% 1.5%;
     border-radius: 50px;
+    font-family: 'Amazon Embered';
+    color: white;
 }
 
 img.container{
@@ -99,9 +132,6 @@ img.container{
 }
 
 
-.text2{
-    color: white;
-}
 
 div.devices{
     text-align: center;
@@ -128,15 +158,19 @@ img.devices:hover{
     opacity: 1;
 }
 
-.row{
-    width: 30px;
-    height: ;
-}
 
+#politicas{
+    text-align: center;
+    margin-top: 100px;
+}
 
 .etc{
     font-family: 'Amazon Embered';
-    font-size: 20px;
     color: white;
-    margin: 10px 20px;
+    margin: auto 15px;
+    font-size: 25px;
+}
+
+a{
+    text-decoration: none;
 }
