--- a/DIA7/style.css/style.css
+++ b/DIA7/style.css/style.css
@@ -7,7 +7,7 @@
     width: 1400px;
     height: 800px;
     /* Fondo Temporal */
-    background-color: rgb(77, 131, 131);
+    background-color: white;
     margin: 200px 100px;
 }
 
@@ -83,5 +83,29 @@ button.hiperbotones{
 
 button.hiperbotones:hover{
     border-color: rgb(250, 250, 250, 0.2);
+}
+
+#metrocarta{
+    margin-left: 10%
+}
+
+.parte-baja{
+    display: flex;
+    background-color: rgb(134, 134, 134);
+}
+
+.cuadro-metrolinea{
+    border: 5px solid rgb(150, 244, 36);
+    border-radius: 10px;
+    width: 10%;
+    background-color: (150, 244, 36);
+    height: 10%;
+    margin-top: 5%; 
+    margin-left: 40%;
+    text-align: center;
+}
+
+#logometrocuadro{
+    margin-top: 15%;
 }
 
