feat: :art: fixing the css

--- a/DIA11/styles.css
+++ b/DIA11/styles.css
@@ -11,6 +11,7 @@ body{
     background-color: black;
     width: 100%;
     margin-top: 3%;
+    height: 100%;
 }
 
 
@@ -76,24 +77,3 @@ body{
     object-fit: cover;
 }
 
-.FondoNegro__Grid--Seccion2 {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: auto auto;
-    gap: 10px;
-}
-
-.Seccion2__Rc1 {
-    grid-column: span 1;
-    grid-row: span 1;
-}
-
-.Seccion2__Rc2 {
-    grid-column: span 2;
-    grid-row: span 1;
-}
-
-.Seccion2__Rc3 {
-    grid-column: span 1;
-    grid-row: 2;
-}
